KUrlMimeData: don't use xdg-portal when copy&paste in the same process

There's no need to use the FileTransfer portal when the sender and receiver process are the same process

When copying, sets application/x-kde-source-id in the mime to the app's dbus unique connection name. When pasting, compares the source id against the current process, and skips the portal if they match.

Some previously internal functions are exported in kurlmimedata_p.h for use in unittests.

BUG: 470147